--- a/notebooks/paper/s1_performance_benchmark/2_1_refinement_seq.ipynb
+++ b/notebooks/paper/s1_performance_benchmark/2_1_refinement_seq.ipynb
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1273,9 @@
      "output_type": "stream",
      "text": [
       "100%|██████████| 15982/15982 [00:11<00:00, 1347.21it/s]\n",
-      " 31%|███▏      | 20659/65856 [00:10<00:30, 1471.25it/s]"
+      "100%|██████████| 65856/65856 [00:45<00:00, 1435.90it/s]\n",
+      "100%|██████████| 61132/61132 [00:43<00:00, 1411.82it/s]\n",
+      "100%|██████████| 43131/43131 [00:29<00:00, 1486.26it/s]\n"
      ]
     }
    ],
@@ -1289,17 +1291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15982/15982 [00:16<00:00, 995.20it/s]\n",
-      "100%|██████████| 65856/65856 [01:03<00:00, 1030.75it/s]\n",
-      "100%|██████████| 61132/61132 [00:59<00:00, 1024.02it/s]\n",
-      "100%|██████████| 43131/43131 [01:09<00:00, 617.76it/s] \n"
+      "100%|██████████| 15982/15982 [00:20<00:00, 788.11it/s]\n",
+      "100%|██████████| 65856/65856 [01:19<00:00, 830.67it/s] \n",
+      "100%|██████████| 61132/61132 [01:14<00:00, 819.56it/s] \n",
+      "100%|██████████| 43131/43131 [01:31<00:00, 472.67it/s] \n"
      ]
     }
    ],
@@ -1314,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1490,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1520,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Creating plots for 43077 spectra loaded from 5 engines (['casanovo', 'instanovo', 'novob', 'pepnet', 'contranovo']).\n",
+      "Creating plots for 43077 spectra loaded from 8 engines (['AdaNovo', 'pi-HelixNovo', 'pi-PrimeNovo', 'casanovo', 'instanovo', 'novob', 'pepnet', 'contranovo']).\n",
       "denovo\n",
       "plotting casanovo\n",
       "plotting score_ms2rescore\n",
@@ -1566,7 +1568,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Creating plots for 42876 spectra loaded from 5 engines (['casanovo', 'instanovo', 'novob', 'pepnet', 'contranovo']).\n",
+      "Creating plots for 42876 spectra loaded from 8 engines (['AdaNovo', 'pi-HelixNovo', 'pi-PrimeNovo', 'casanovo', 'instanovo', 'novob', 'pepnet', 'contranovo']).\n",
       "denovo\n",
       "plotting novob\n",
       "plotting score_ms2rescore\n",
@@ -1614,7 +1616,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Creating plots for 43072 spectra loaded from 5 engines (['casanovo', 'instanovo', 'novob', 'pepnet', 'contranovo']).\n",
+      "Creating plots for 43072 spectra loaded from 8 engines (['AdaNovo', 'pi-HelixNovo', 'pi-PrimeNovo', 'casanovo', 'instanovo', 'novob', 'pepnet', 'contranovo']).\n",
       "denovo\n",
       "plotting instanovo\n",
       "plotting score_ms2rescore\n",
@@ -1662,7 +1664,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Creating plots for 43131 spectra loaded from 5 engines (['casanovo', 'instanovo', 'novob', 'pepnet', 'contranovo']).\n",
+      "Creating plots for 43131 spectra loaded from 8 engines (['AdaNovo', 'pi-HelixNovo', 'pi-PrimeNovo', 'casanovo', 'instanovo', 'novob', 'pepnet', 'contranovo']).\n",
       "denovo\n",
       "plotting pepnet\n",
       "plotting score_ms2rescore\n",
@@ -1710,7 +1712,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Creating plots for 21612 spectra loaded from 5 engines (['casanovo', 'instanovo', 'contranovo', 'novob', 'pepnet']).\n",
+      "Creating plots for 21612 spectra loaded from 8 engines (['AdaNovo', 'pi-HelixNovo', 'pi-PrimeNovo', 'casanovo', 'instanovo', 'contranovo', 'novob', 'pepnet']).\n",
       "denovo\n",
       "plotting contranovo\n",
       "plotting score_ms2rescore\n",
